--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/elements": "^2.6.4",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@reduxjs/toolkit": "^2.9.0",
+    "dayjs": "^1.11.18",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "@react-native/new-app-screen": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-nitro-modules": "^0.29.6",
+    "react-native-nitro-sqlite": "^9.1.11",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.6.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
